[workspace]
resolver = "2"
members = [
    "crates/sig-net",
    "crates/signet-ffi",
]

[workspace.package]
version = "0.8.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Pixout-Lighting/sig-net"
authors = ["Wayne Howell <wayne@singularity.uk>", "Evgenii Troinov <troinof@gmail.com>"]
